k8s/dev/produtos-ms-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pedidos-ms
  namespace: totem
  labels:
    app: pedidos-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pedidos-ms
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pedidos-ms
    spec:
      containers:
      - name: pedidos-ms
        image: andrauss/pedido-ms:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 256Mi
        workingDir: /var/www
      imagePullSecrets:
      - name: dockerhub
      restartPolicy: Always
      volumes:
      - hostPath:
          path: /tmp
          type: Directory
        name: tmpdir
