k8s/dev/ingress-nginx-controller.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: ingress-nginx
    meta.helm.sh/release-namespace: totem
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/version: 1.11.1
    helm.sh/chart: ingress-nginx-4.11.1
  name: ingress-nginx-controller
  namespace: totem
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.111.179.177
  clusterIPs:
    - 10.111.179.177
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - appProtocol: http
      name: http
      nodePort: 32557
      port: 3555
      protocol: TCP
      targetPort: http
    - appProtocol: https
      name: https
      nodePort: 30379
      port: 3556
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
      - hostname: localhost
