k8s/dev/pedidos-ms-postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: pedidos-ms-postgres
  name: pedidos-ms-postgres
  namespace: totem
spec:
  type: NodePort
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
      nodePort: 32438
  selector:
    app: pedidos-ms-postgres
