k8s/dev/produtos-ms-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: pedidos-ms
  name: pedidos-ms
  namespace: totem
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
      nodePort: 31002
  selector:
    app: pedidos-ms
