k8s/dev/pedidos-ms-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pedidos-ms-ingrss
  namespace: totem
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /api/orders
        pathType: Prefix
        backend:
          service:
            name: pedidos-ms
            port:
              number: 80
      - path: /api/products
        pathType: Prefix
        backend:
          service:
            name: produtos-ms
            port:
              number: 80      
      - path: /api/payments
        pathType: Prefix
        backend:
          service:
            name: payment-ms
            port:
              number: 80
